[ADD] statusController: ping, pingAll, health
