# assets/api.yml
@@ -31,7 +31,36 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: 'OK'
+                    example: 'ok'
+
+  /ping/all:
+    get:
+      tags:
+        - Status
+      operationId: pingAll
+      responses:
+        200:
+          description: 'Server and its services are active.'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: 'ok'
+                  services:
+                    type: object
+                    properties:
+                      apikeys:
+                        type: string
+                        example: 'ok'
+                      core:
+                        type: string
+                        example: 'ok'
+                      users:
+                        type: string
+                        example: 'ok'
 
   /health:
     get:
